fix: home page rol user

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -3,9 +3,9 @@
     <ion-buttons slot="start">
       <img src="assets/img/logo.png" alt="Logo" class="toolbar-logo" />
     </ion-buttons>
-    <ion-title class="ion-text-center"
-      >{{ nombreUsuario }} ({{ rol }})</ion-title
-    >
+    <ion-title class="ion-text-center">
+      {{ nombreUsuario }}
+    </ion-title>
     <ion-buttons slot="end">
       <ion-button
         (click)="navigateAndBlur('/profile')"
